src/main/java/com/example/InstagramCloneCoding/global/error/ErrorCode.java
package com.example.InstagramCloneCoding.global.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {

    String name();
    HttpStatus getHttpStatus();
    String getMessage();
}
